// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview: update business details modal renders correctly when opened for restricted account 1`] = `
.emotion-0 {
  margin-bottom: 0;
  margin-left: calc(4px * 2);
}

<div
  aria-labelledby="components-modal-header-0"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  style="--modal-frame-animation-duration: 200ms;"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-0"
        >
          Update business details
        </h1>
      </div>
      <div
        class="components-spacer emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Spacer"
      />
      <button
        aria-label="Close"
        class="components-button is-compact has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z"
          />
        </svg>
      </button>
    </div>
    <div>
      <div
        class="wcpay-update-business-details-modal__wrapper"
      >
        <div
          class="wcpay-update-business-details-modal__body"
        >
          <p>
            Payments and payouts are disabled for this account until missing information is updated. Please update the following information in the Stripe dashboard.
          </p>
          <div
            class="components-notice is-warning"
          >
            <div
              class="components-visually-hidden emotion-2 emotion-1"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              Warning notice
            </div>
            <div
              class="components-notice__content"
            >
              The provided document was from an unsupported country.
              <div
                class="components-notice__actions"
              />
            </div>
          </div>
          <div
            class="components-notice is-warning"
          >
            <div
              class="components-visually-hidden emotion-2 emotion-1"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              Warning notice
            </div>
            <div
              class="components-notice__content"
            >
              The representative must have an address in the same country as the company.
              <div
                class="components-notice__actions"
              />
            </div>
          </div>
        </div>
      </div>
      <hr />
      <div
        class="wcpay-update-business-details-modal__footer"
      >
        <button
          class="components-button is-next-40px-default-size is-secondary"
          type="button"
        >
          Cancel
        </button>
        <button
          class="components-button is-next-40px-default-size is-primary"
          type="button"
        >
          Update business details
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Overview: update business details modal renders correctly when opened for restricted soon account with current deadline 1`] = `
.emotion-0 {
  margin-bottom: 0;
  margin-left: calc(4px * 2);
}

<div
  aria-labelledby="components-modal-header-1"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  style="--modal-frame-animation-duration: 200ms;"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-1"
        >
          Update business details
        </h1>
      </div>
      <div
        class="components-spacer emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Spacer"
      />
      <button
        aria-label="Close"
        class="components-button is-compact has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z"
          />
        </svg>
      </button>
    </div>
    <div>
      <div
        class="wcpay-update-business-details-modal__wrapper"
      >
        <div
          class="wcpay-update-business-details-modal__body"
        >
          <p>
            Additional information is required to verify your business. Update by 7pm Dec 31, 2021 to avoid a disruption in payouts.
          </p>
          <div
            class="components-notice is-warning"
          >
            <div
              class="components-visually-hidden emotion-2 emotion-1"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              Warning notice
            </div>
            <div
              class="components-notice__content"
            >
              The provided document was from an unsupported country.
              <div
                class="components-notice__actions"
              />
            </div>
          </div>
          <div
            class="components-notice is-warning"
          >
            <div
              class="components-visually-hidden emotion-2 emotion-1"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              Warning notice
            </div>
            <div
              class="components-notice__content"
            >
              The representative must have an address in the same country as the company.
              <div
                class="components-notice__actions"
              />
            </div>
          </div>
        </div>
      </div>
      <hr />
      <div
        class="wcpay-update-business-details-modal__footer"
      >
        <button
          class="components-button is-next-40px-default-size is-secondary"
          type="button"
        >
          Cancel
        </button>
        <button
          class="components-button is-next-40px-default-size is-primary"
          type="button"
        >
          Update business details
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Overview: update business details modal renders correctly when opened for restricted soon account without current deadline 1`] = `
.emotion-0 {
  margin-bottom: 0;
  margin-left: calc(4px * 2);
}

<div
  aria-labelledby="components-modal-header-2"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  style="--modal-frame-animation-duration: 200ms;"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-2"
        >
          Update business details
        </h1>
      </div>
      <div
        class="components-spacer emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Spacer"
      />
      <button
        aria-label="Close"
        class="components-button is-compact has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z"
          />
        </svg>
      </button>
    </div>
    <div>
      <div
        class="wcpay-update-business-details-modal__wrapper"
      >
        <div
          class="wcpay-update-business-details-modal__body"
        >
          <p>
            Payments and payouts are disabled for this account until missing information is updated. Please update the following information in the Stripe dashboard.
          </p>
          <div
            class="components-notice is-warning"
          >
            <div
              class="components-visually-hidden emotion-2 emotion-1"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              Warning notice
            </div>
            <div
              class="components-notice__content"
            >
              The provided document was from an unsupported country.
              <div
                class="components-notice__actions"
              />
            </div>
          </div>
          <div
            class="components-notice is-warning"
          >
            <div
              class="components-visually-hidden emotion-2 emotion-1"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              Warning notice
            </div>
            <div
              class="components-notice__content"
            >
              The representative must have an address in the same country as the company.
              <div
                class="components-notice__actions"
              />
            </div>
          </div>
        </div>
      </div>
      <hr />
      <div
        class="wcpay-update-business-details-modal__footer"
      >
        <button
          class="components-button is-next-40px-default-size is-secondary"
          type="button"
        >
          Cancel
        </button>
        <button
          class="components-button is-next-40px-default-size is-primary"
          type="button"
        >
          Update business details
        </button>
      </div>
    </div>
  </div>
</div>
`;
